--- a/main.html
+++ b/main.html
@@ -34,6 +34,14 @@
   <img src="../ДИНАМИКА/img/3.jpg" alt="logotip" width="400px";height= 200px";>
   <img src="../ДИНАМИКА/img/4.jpeg" alt="logotip" width="400px";height= 200px";>
 </section>
+  <section>
+  <p>Почему футбол должен войти в жизнь Вашего ребенка?</p>
+  <ul>
+    <li>Ребенок станет физически развитым, причем очень быстро, укрепятся не только кости, но и мышечная ткань</li>
+    <li>оманда даст ребенку возможность почувствовать себя личностью, пусть и маленькой. Малыш самостоятельно будет выстраивать отношения с соперниками и товарищами по команде, он адаптируется в обществе.</li>
+    <li>Этот вид спорта положительно скажется и на психологическом развитии ребенка, он научится думать, рассчитывать каждый свой шаг, оценивать действия других игроков, планировать. Малыш научится бороться, будет понимать, что такое цель. Футбол — отличный способ выработать силу воли.</li>
+  </ul>
+</section>
 
 
 </html>
